# MCP_banking_data

./: README.md  asgi.py  environment.yml  main.py  mcp.json  observability.py  pyproject.toml  render.yaml  requirements.txt
TEST_FILES/: List of Customers_CSV Example_test file.csv
automation_mvn_tests/: pom.xml
automation_mvn_tests/src/main/java/org/opencart/pages/: LoginPage.java
automation_mvn_tests/src/test/java/org/opencart/stepDefinition/: LoginPageStepDefinition.java
automation_mvn_tests/src/test/java/runner/: TestRunner.java
automation_mvn_tests/src/test/resources/: testng.xml
automation_mvn_tests/src/test/resources/features/: loginPage.feature
fastapi_app/: __init__.py  app.py  config.py  models.py
